--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -167,6 +167,26 @@
     "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
     "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
   },
+  "settings#upstream-proxy#error-modal-title": {
+    "message": "Upstream Proxy Error",
+    "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
+  },
+  "settings#upstream-proxy#error-modal-body-default": {
+    "message": "Psiphon is currently configured to use your system proxy as its \"upstream proxy\".<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease enable \"Don't use upstream proxy\" and try again.",
+    "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
+  },
+  "settings#upstream-proxy#error-modal-body-configured": {
+    "message": "You have configured Psiphon to use an \"upstream proxy\".<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
+    "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
+  },
+  "settings#upstream-proxy#error-modal-body-pre-message": {
+    "message": "Here is the technical error info:",
+    "description": "Preamble before the technical error message is shown in the 'Upstream Proxy Error' dialog box. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
+  },
+  "settings#upstream-proxy#error-modal-close-button": {
+    "message": "Close",
+    "description": "Text in the button that dismisses the 'Upstream Proxy Error' dialog. It's the only button."
+  },
   "settings#transport-mode#heading": {
     "message": "Transport Mode",
     "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
