--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -143,6 +143,18 @@
     "message": "Local ports must be distinct from each other.",
     "description": "Error message that shows if the HTTP local proxy port and SOCKS local proxy port are set to a value and are the same as each other. The local ports must be different from each other. Or one or both of the fields can be empty, which means 'automatic selection'."
   },
+  "settings#local-proxy-ports#error-modal-title": {
+    "message": "Local Proxy Port Conflict",
+    "description": "Title of the message box showing the error message when it is detected that the user has chosen a local proxy port (either HTTP or SOCKS) that is already in use and therefore can't be used by Psiphon."
+  },
+  "settings#local-proxy-ports#error-modal-body-http": {
+    "message": "<p>You have configured Psiphon to use a specific local port for its HTTP proxy.<br>\nHowever, that port appears to be already in use and so Psiphon cannot use it.</p>\n<p>Please change the configured HTTP proxy port value and try again. We recommended that you clear the value so that Psiphon can automatically pick an available port.</p>",
+    "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the HTTP proxy port, rather than the SOCKS proxy port."
+  },
+  "settings#local-proxy-ports#error-modal-body-socks": {
+    "message": "<p>You have configured Psiphon to use a specific local port for its SOCKS proxy.<br>\nHowever, that port appears to be already in use and so Psiphon cannot use it.</p>\n<p>Please change the configured SOCKS proxy port value and try again. We recommended that you clear the value so that Psiphon can automatically pick an available port.</p>",
+    "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the SOCKS proxy port, rather than the HTTP proxy port."
+  },
   "settings#upstream-proxy#heading": {
     "message": "Upstream Proxy",
     "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
@@ -182,10 +194,6 @@
   "settings#upstream-proxy#error-modal-body-pre-message": {
     "message": "Here is the technical error info:",
     "description": "Preamble before the technical error message is shown in the 'Upstream Proxy Error' dialog box. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
-  },
-  "settings#upstream-proxy#error-modal-close-button": {
-    "message": "Close",
-    "description": "Text in the button that dismisses the 'Upstream Proxy Error' dialog. It's the only button."
   },
   "settings#transport-mode#heading": {
     "message": "Transport Mode",
@@ -274,5 +282,9 @@
   "about#visit-company-site": {
     "message": "To find out more about Psiphon Inc. please visit our <a href=\"https://psiphon.ca\">company website</a>.",
     "description": "Paragraph on the 'About' page telling users how get info about Psiphon the company (versus Psiphon the application). We have a separate company site."
+  },
+  "general#modal-close-button": {
+    "message": "Close",
+    "description": "Text in the button that dismisses a modal dialog. It is often the only button (no 'OK' or 'Cancel', etc.)."
   }
 }
