--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -271,6 +271,10 @@
     "message": "Show debug messages",
     "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
   },
+  "messages#placeholder": {
+    "message": "No messages yet",
+    "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
+  },
   "language#success-message": {
     "message": "<strong>Hello!</strong> Welcome to Psiphon.",
     "description": "A welcome message shown to the user when they first switch to the correct UI language"
