--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -111,6 +111,10 @@
     "message": "[<strong>Ħḗḗŀŀǿǿ!</strong> Ẇḗḗŀƈǿǿḿḗḗ ŧǿǿ Ƥşīīƥħǿǿƞ.]",
     "description": "A welcome message shown to the user when they first switch to the correct UI language"
   },
+  "messages#placeholder": {
+    "message": "[Ƞǿǿ ḿḗḗşşȧȧɠḗḗş ẏḗḗŧ]",
+    "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
+  },
   "messages#show-debug-label": {
     "message": "[Şħǿǿẇ ḓḗḗƀŭŭɠ ḿḗḗşşȧȧɠḗḗş]",
     "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
